--- a/build.gradle
+++ b/build.gradle
@@ -7,11 +7,17 @@ version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
+    flatDir {
+        dirs 'lib'
+    }
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
+    implementation 'edu.stanford.nlp:stanford-corenlp:4.5.1'
+    implementation 'edu.stanford.nlp:stanford-adept:2.7.3'
+    implementation files('lib/stanford-corenlp-4.5.1-models-german.jar')
 }
 
 test {
