--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id "application"
 }
 
 group 'org.cv'
@@ -14,10 +15,11 @@ repositories {
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
+    implementation 'org.slf4j:slf4j-api:2.0.0'
+    implementation 'org.slf4j:slf4j-simple:2.0.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
-    implementation 'edu.stanford.nlp:stanford-corenlp:4.5.1'
-    implementation 'edu.stanford.nlp:stanford-adept:2.7.3'
-    implementation files('lib/stanford-corenlp-4.5.1-models-german.jar')
+    implementation 'edu.stanford.nlp:stanford-corenlp:4.2.0'
+    implementation files('lib/stanford-corenlp-4.2.0-models-german.jar')
 }
 
 test {
